Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-138200

iOS Style: Wrong palette colors when switching color scheme from application

XMLWordPrintable

    • iOS/tvOS/watchOS
    • 4eee74ecf (dev), 50e0ecc8a (6.10), c511dcdea (6.9), 66420e1cb (tqtc/lts-6.8)

      When switching the color scheme from the qt quick application in iOS, the palette colors are not updated.

      To reproduce:

      Run gallery example on iOS with iOS style

      Switch from light to dark mode through the Settings dialog.

      Expected: Palette colors are updated to dark mode, while image assets are updated accordingly.

      Actual: Palette colors are updated accordingly along with image assets.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            dorisverria Doris Verria
            dorisverria Doris Verria
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: